{
  "version": 4,
  "terraform_version": "1.11.0",
  "serial": 250,
  "lineage": "5ad73bbc-eba6-8a29-b3d0-6486345aa6f7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096db08f6e1039591",
            "association_id": "eipassoc-0c1b987f875700049",
            "domain": "vpc",
            "id": "eipalloc-096db08f6e1039591",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f0da8da88715a601",
            "private_dns": "ip-10-0-0-238.ec2.internal",
            "private_ip": "10.0.0.238",
            "public_dns": "ec2-98-85-153-20.compute-1.amazonaws.com",
            "public_ip": "98.85.153.20",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-natgw"
            },
            "tags_all": {
              "Name": "eip-natgw"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:600852671443:instance/i-0a082ec9133595819",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a082ec9133595819",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pvkey-ges",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d0a5518601ee41fa",
            "private_dns": "ip-10-0-1-253.ec2.internal",
            "private_ip": "10.0.1.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-074187c500b177bb4",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-018a2e7b51d320cbe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a0d0ed134677f7e",
            "tags": {
              "Name": "instancia-privada"
            },
            "tags_all": {
              "Name": "instancia-privada"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018a2e7b51d320cbe"
            ]
          },
          "dependencies": [
            "aws_key_pair.main-private",
            "aws_security_group.main",
            "aws_subnet.main-private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-04b4f1a9cf54c11d0",
            "arn": "arn:aws:ec2:us-east-1:600852671443:instance/i-06f494970ac661737",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06f494970ac661737",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "pbkey-ges",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-082f0c557d9245cd7",
            "private_dns": "ip-10-0-0-181.ec2.internal",
            "private_ip": "10.0.0.181",
            "public_dns": "ec2-100-26-230-244.compute-1.amazonaws.com",
            "public_ip": "100.26.230.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-04ed65bb499aa538e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-018a2e7b51d320cbe"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b840396c2a9ff153",
            "tags": {
              "Name": "instancia-publica"
            },
            "tags_all": {
              "Name": "instancia-publica"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-018a2e7b51d320cbe"
            ]
          },
          "dependencies": [
            "aws_key_pair.main-public",
            "aws_security_group.main",
            "aws_subnet.main-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:internet-gateway/igw-001dc530895857a3e",
            "id": "igw-001dc530895857a3e",
            "owner_id": "600852671443",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-096db08f6e1039591",
            "connectivity_type": "public",
            "id": "nat-008a36befd5d3533c",
            "network_interface_id": "eni-0f0da8da88715a601",
            "private_ip": "10.0.0.238",
            "public_ip": "98.85.153.20",
            "subnet_id": "subnet-0b840396c2a9ff153",
            "tags": {
              "Name": "igw-nat"
            },
            "tags_all": {
              "Name": "igw-nat"
            }
          },
          "dependencies": [
            "aws_eip.main-public",
            "aws_subnet.main-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:network-acl/acl-0256bcee77f8ab97c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0256bcee77f8ab97c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/24",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/24",
                "from_port": 32000,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/24",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/24",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "600852671443",
            "subnet_ids": [
              "subnet-01a0d0ed134677f7e"
            ],
            "tags": {
              "Name": "acl-privada"
            },
            "tags_all": {
              "Name": "acl-privada"
            },
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main-private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public_acl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:network-acl/acl-050311cf7dd59c6bc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-050311cf7dd59c6bc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 32000,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 400,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 300,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 200,
                "to_port": 80
              }
            ],
            "owner_id": "600852671443",
            "subnet_ids": [
              "subnet-0b840396c2a9ff153"
            ],
            "tags": {
              "Name": "acl-publica"
            },
            "tags_all": {
              "Name": "acl-publica"
            },
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_subnet.main-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:route-table/rtb-0791c459b4f083a6d",
            "id": "rtb-0791c459b4f083a6d",
            "owner_id": "600852671443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-008a36befd5d3533c",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-privada"
            },
            "tags_all": {
              "Name": "rt-privada"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.main-public",
            "aws_nat_gateway.main",
            "aws_subnet.main-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:route-table/rtb-0fbba315dcc6f115d",
            "id": "rtb-0fbba315dcc6f115d",
            "owner_id": "600852671443",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001dc530895857a3e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-publica"
            },
            "tags_all": {
              "Name": "rt-publica"
            },
            "timeouts": null,
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019482996c1fe8158",
            "route_table_id": "rtb-0791c459b4f083a6d",
            "subnet_id": "subnet-01a0d0ed134677f7e"
          },
          "dependencies": [
            "aws_eip.main-public",
            "aws_nat_gateway.main",
            "aws_route_table.main-private",
            "aws_subnet.main-private",
            "aws_subnet.main-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd7ce0368fedb79c",
            "route_table_id": "rtb-0fbba315dcc6f115d",
            "subnet_id": "subnet-0b840396c2a9ff153"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main-public",
            "aws_subnet.main-public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:security-group/sg-018a2e7b51d320cbe",
            "description": "main security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-018a2e7b51d320cbe",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "main-sg",
            "name_prefix": "",
            "owner_id": "600852671443",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:subnet/subnet-01a0d0ed134677f7e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a0d0ed134677f7e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "600852671443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-privada"
            },
            "tags_all": {
              "Name": "subnet-privada"
            },
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:subnet/subnet-0b840396c2a9ff153",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b840396c2a9ff153",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "600852671443",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet-publica"
            },
            "tags_all": {
              "Name": "subnet-publica"
            },
            "vpc_id": "vpc-0efc21e0ef708ac17"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:600852671443:vpc/vpc-0efc21e0ef708ac17",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/23",
            "default_network_acl_id": "acl-0c6424d8a1fffa4aa",
            "default_route_table_id": "rtb-062101cf90d146e55",
            "default_security_group_id": "sg-0562fb3aba67176dd",
            "dhcp_options_id": "dopt-0825f6f2e2160bdd7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0efc21e0ef708ac17",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062101cf90d146e55",
            "owner_id": "600852671443",
            "tags": {
              "Name": "vpc-01"
            },
            "tags_all": {
              "Name": "vpc-01"
            }
          }
        }
      ]
    }
  ]
}